Nearly fixed the issue, however it is still present. Attempted overflow-x: hidden;

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
   padding: 0;
   background-color: #0A192F;
   font-family: "Roboto-Mono", monospace;
+  overflow-x: hidden;
 }
 
 .content {
